Fixed menu styling and spacing in menu. Removed content from home page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,7 +44,6 @@ h1, h2 {
 .menu a {
     text-decoration: none;
     color: white;
-    margin-right: 10px;
     padding: 20px;
     border-right: white solid 1px;
     text-align: center center;
@@ -58,15 +57,17 @@ h1, h2 {
 }
 
 .menu a:hover {
-    border-bottom: 1px solid white;
+    text-decoration: underline 1px;
+    text-underline-offset: 10px;
 }
 
 .current-menu {
-    border-bottom: 1px solid white;
+    text-decoration: underline 1px;
+    text-underline-offset: 10px;
 }
 
 .no-border {
-    border-right: none;
+    border-right: none !important; 
 }
 
 /* Home page only start */
@@ -143,7 +144,6 @@ h1, h2 {
 
 #contact-me-image-div {
     float: right;
-    width: 300px;
     height: 500px;
     padding-right: 10px;
 }
@@ -173,7 +173,6 @@ h1, h2 {
 
 #services-image-div {
     float: right;
-    width: 300px;
     height: 500px;
     padding-right: 10px;
 }
